chore: update get detail flat data response for equipmentRoomClass